--- a/templates/base.html
+++ b/templates/base.html
@@ -252,7 +252,7 @@
         <div id="mobile-menu" class="hidden md:hidden bg-white shadow-xl py-1 border-t border-gray-100">
             <div class="divide-y divide-gray-100">
                 <a href="{% url 'store:home' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">{% trans "صفحه اصلی" %}</a>
-                <a href="{% url 'store:product_list' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">{% trans "صفحه اصلی" %}</a>
+                <a href="{% url 'store:product_list' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">{% trans "محصولات" %}</a>
                 <a href="{% url 'store:faqs' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">{% trans "سوالات متداول" %}</a>
                 <a href="#" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">{% trans "دسته‌بندی‌ها" %}</a>
                 <a href="#about" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">{% trans "درباره ما" %}</a>
