--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
             <button type="button" onclick="hideToast()"
                 class="mr-2 text-gray-500 hover:text-gray-900 transition flex items-center justify-center">
                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                 </svg>
             </button>
         </div>
